fix: scrollbar overflow

--- a/src/renderer/pages/project-list-main-panel.less
+++ b/src/renderer/pages/project-list-main-panel.less
@@ -4,7 +4,7 @@
 .list-container {
   background: white;
   width: 100%;
-  height: 100%;
+  height: 90%;
   overflow: auto;
 
   .empty-list-hint {
